--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
     "mozu-action-helpers": "^0.5.6",
     "mozu-action-simulator": "^1.6.3",
     "time-grunt": "^1.4.0"
+  },
+  "dependencies": {
+    "guid": "0.0.12",
+    "moment": "^2.21.0",
+    "mozu-node-sdk": "^2.12.0",
+    "needle": "^2.2.0",
+    "underscore": "^1.8.3",
+    "underscore-node": "^0.1.2",
+    "xml2js": "^0.4.19",
+    "xmldoc": "^1.1.0"
   }
 }
